<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_article_title"
                    style="@style/Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_title"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textView_article_subheading"
                    style="@style/Subheading"
                    android:layout_marginTop="@dimen/double_text_margin"
                    android:text="@string/sample_subheading" />

                <TextView
                    android:id="@+id/textView_article_text1"
                    style="@style/Content"
                    android:layout_marginTop="@dimen/text_margin" />

                <!-- You can place an advertisement here -->

                <TextView
                    android:id="@+id/textView_article_text2"
                    style="@style/Content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="@string/sample_content" />


            </LinearLayout>

            <include layout="@layout/progressbar" />

            <!-- You can place another advertisement here -->

            <TextView
                android:id="@+id/textView_pubDate"
                style="@style/Pubdate"
                android:layout_marginTop="@dimen/text_margin"
                android:text="Last updated: Today" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.NestedScrollView>
